--- a/docs-book/config.yml
+++ b/docs-book/config.yml
@@ -1,6 +1,6 @@
 ---
 book_repo: docs-book
-layout_repo: docs-layout
+layout_repo: pivotal-cf/docs-layout-repo
 
 broken_link_exclusions: iefix|arrowhead
 repo_link_enabled: true
